; ModuleID = '/home/carl/AnghaBench/jq/src/extr_inject_errors.c_ferror.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_inject_errors.c_ferror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fail = common dso_local global i32* null, align 8
@error = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ferror(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = call i32 @GET_REAL(i32 (i32*)* @ferror)
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @real_ferror(i32* %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32*, i32** @fail, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = icmp eq i32* %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @error, align 4
  store i32 %12, i32* @errno, align 4
  store i32 1, i32* %2, align 4
  br label %15

13:                                               ; preds = %1
  %14 = load i32, i32* %4, align 4
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %13, %11
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @GET_REAL(i32 (i32*)*) #1

declare dso_local i32 @real_ferror(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
